directory structure reorganization

--- a/programs/hubatom/CMakeLists.txt
+++ b/programs/hubatom/CMakeLists.txt
@@ -1,10 +1,6 @@
 
 set(program_sources
-  dlr2dfit_mf.cpp
-  dlr2dsingfit_mf.cpp
-  generate_dlr2d_if.cpp
-  siam_vertex.cpp
-  est_rank_tst.cpp
+  hubatom.cpp
   )
 
 foreach(source_file ${program_sources})
@@ -13,5 +9,3 @@ foreach(source_file ${program_sources})
   target_link_libraries(${program_name} nddlr_c)
   target_include_directories(${program_name} PRIVATE ${CMAKE_SOURCE_DIR}/src/)
 endforeach(source_file)
-
-add_subdirectory(hubatom)
